<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ut3.alertExercise.presentation.AlertActivity">

        <RelativeLayout
            android:id="@+id/principal_image"
            style="@style/Vineyard_image_height"
            android:layout_width="match_parent"
            android:background="@drawable/ic_vineyard">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_avisos"
                style="@style/TextAvisosPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="@string/avisos_text" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/MarginsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_alert"
                    style="@style/TextInfoAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/icon_alert"
                    tools:ignore="MissingConstraints"
                    tools:text="@string/title_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_alert"
                    style="@style/TextInfoAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/icon_alert"
                    app:layout_constraintTop_toBottomOf="@+id/title_alert"
                    tools:ignore="MissingConstraints"
                    tools:text="@string/date_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/description_alert"
                    style="@style/TextInfoAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    app:layout_constraintStart_toEndOf="@id/icon_alert"
                    app:layout_constraintTop_toBottomOf="@+id/date_alert"
                    tools:ignore="MissingConstraints"
                    tools:text="@string/description_text" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>