<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_info"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_alert_description"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_alert"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_text_description_alert" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/files_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_alert"
            tools:ignore="MissingConstraints"
            tools:text="@string/files_download" />

        <View
            android:id="@+id/separator_first"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/files_title"
            tools:ignore="MissingConstraints" />

        <TableLayout
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:id="@+id/list_files"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:stretchColumns="0,2"
            app:layout_constraintTop_toBottomOf="@id/separator_first">

            <TableRow android:background="@drawable/border_table">
                <TextView
                    android:id="@+id/file_one"
                    android:padding="12dp"
                    android:text="@string/table_col1" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:padding="6dp"
                    android:src="@drawable/ic_pdf" />
            </TableRow>

            <TableRow android:background="@drawable/border_table">
                <TextView
                    android:id="@+id/file_two"
                    android:padding="12dp"
                    android:text="@string/table_col1" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:padding="6dp"
                    android:src="@drawable/ic_pdf" />
            </TableRow>
        </TableLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/files_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_files"
            tools:ignore="MissingConstraints"
            tools:text="@string/content_alert" />

        <View
            android:id="@+id/separator_second"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/files_content_title"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content_files"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_second"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>