<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey_100">

    <!-- Cabecera -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image01"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="40dp"
            tools:src="@drawable/ic_netflix" />

        <TextView
            android:id="@+id/text01"
            style="@style/DescriptionView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            tools:text="@string/title_header_1" />

        <TextView
            android:id="@+id/text02"
            style="@style/DescriptionView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            tools:text="@string/title_header_2" />

        <TextView
            android:id="@+id/text03"
            style="@style/DescriptionView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/image02"
            android:gravity="center"
            tools:text="@string/title_header_3" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Cuerpo con películas -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativelayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                tools:text="@string/content_title1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image02"
                style="@style/FilmView"
                android:layout_below="@+id/text04"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image03"
                style="@style/FilmView"
                android:layout_below="@+id/text04"
                android:layout_toEndOf="@id/image02"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image04"
                style="@style/FilmView"
                android:layout_below="@+id/text04"
                android:layout_toEndOf="@id/image03"
                tools:src="@tools:sample/avatars" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                tools:text="@string/content_title2" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image05"
                style="@style/FilmView"
                android:layout_below="@+id/text05"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image06"
                style="@style/FilmView"
                android:layout_below="@+id/text05"
                android:layout_toEndOf="@id/image05"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image07"
                style="@style/FilmView"
                android:layout_below="@+id/text05"
                android:layout_toEndOf="@id/image06"
                tools:src="@tools:sample/avatars" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                tools:text="@string/content_title3" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image08"
                style="@style/FilmView"
                android:layout_below="@+id/text06"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image09"
                style="@style/FilmView"
                android:layout_below="@+id/text06"
                android:layout_toEndOf="@id/image08"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image10"
                style="@style/FilmView"
                android:layout_below="@+id/text06"
                android:layout_toEndOf="@id/image09"
                tools:src="@tools:sample/avatars" />

        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Footer con iconos de navegación -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearlayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/ic_home" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search"
            style="@style/IconNavBar"
            tools:src="@drawable/ic_search" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/next"
            style="@style/IconNavBar"
            tools:src="@drawable/ic_play" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dwonloads"
            style="@style/IconNavBar"
            tools:src="@drawable/ic_download" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/IconNavBar"
            tools:src="@drawable/ic_menu" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>









